# CS488-Opengl_Japan_Earthquakes

./: CMakeLists.txt  README.md  classes.h  helper.h  main.cpp  quake.txt
